2008-05-13  Tor Lillqvist  <tml@novell.com>

	Bug 496958 - Wacom Bamboo doesn't function with GTK apps in Win32

	* gdk/win32/gdkinput-win32.c (_gdk_input_wintab_init_check): Set
	the "packet rate" of devices to zero instead of 50. This is
	reported to help significantly with Wacom tablet behaviour in GIMP
	and Inkscape. Patch from Thomas Bleeker.

2008-05-12  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkevents-quartz.c:
	* gdk/quartz/gdkquartz.h: Remove special casing of menu key events
	as it's no longer necessary; instead the added quartz API to get
	the nsevent from an event should be used. Also move the global
	filter up so it's done before the check for window-less events.

2008-05-12  Tor Lillqvist  <tml@novell.com>

	Bug 532558 - Cannot build dll when using separate builddir

	* gdk/Makefile.am
	* gtk/Makefile.am: .def file belongs in $(srcdir). Patch by Marko
	Lindqvist.

2008-05-12  Yair Hershkovitz  <yairhr@gmail.com>

	* gtk/gtkmain.c: g_i18n_init(); -> g_i18n_init ();

2008-05-12  Tor Lillqvist  <tml@novell.com>

	Bug 532059 - Leak in win32 clipboard manipulation

	* gdk/win32/gdkselection-win32.c
	(gdk_win32_selection_add_targets): Plug memory leak. Patch by
	Daniel Atallah.

2008-05-11  Yair Hershkovitz  <yairhr@gmail.com>

	* gtk/gtkmain.c: call g_i18n_init() in gettext_initialization(). do
	gettext_initialization only once.

	*  gtk/gtkbuilderparser.c: use glib i18n api. removed dpgettext() as it
	duplicates g_dpgettext() and added _g_dpgettext() to wrap g_dpgettext 
	with the extended functionality that was in the removed dpgettext().

	* gtk/gtkaccellabelc:
	* gtk/gtkstock.c:
	* gtk/gtkimmulticontext.c:
	* gtk/gtkactiongroup.c:
	* gtk/gtkintl.h: use glib i18n api.

2008-05-08  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkgeometry-quartz.c (gdk_window_scroll): Move the
	currently invalidated region. Fixes bug #532048, patch by Yevgen
	Muntyan.

2008-05-08  Richard Hult  <richard@imendio.com>
